--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^6.0.12",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.3",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.14"
   }
 }
