ref deseign & commmentaire

--- a/backend/exemple.env
+++ b/backend/exemple.env
@@ -1,8 +1,9 @@
 // DB SQL
-DB_HOST = "localhost"
-DB_USER = "root"
-DB_PASSWORD = ""
-DB_NAME = "groupomania"
+DB_PORT = le Port de la base de données par default (3306)
+DB_HOST = le host de la base de données
+DB_USER = le nom utilsateur de la base de données
+DB_PASSWORD = mot de passe de connexion à la base de données
+DB_NAME = le nom de la base de données
 
 // TOKEN
-TOKEN = "master.code.develop"
+TOKEN = une chaîne de caractères aléatoire pour sécuriser le token
